marcoTests/testData/error/json.marco
--before
{"hello": "world", "array": [1, 2, 3, true, false, "a", {}, [], [1]]}

--after
8: Unexpected value character ':'

{"hello"ğŸ’¥